home-cluster/headlamp/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
  namespace: headlamp
spec:
  forwardAuth:
    address: http://oauth2-proxy-headlamp.headlamp.svc.cluster.local:4180/oauth2/auth
    authResponseHeaders:
    - X-Auth-Request-User
    - X-Auth-Request-Email
    - X-Auth-Request-Access-Token
    authResponseHeadersRegex: ^X-
    trustForwardHeader: true
