home-cluster/headlamp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headlamp
  labels:
    kubernetes.io/metadata.name: headlamp
