home-cluster/headlamp/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    external-dns.alpha.kubernetes.io/hostname: headlamp.kube.stevearnett.com
    external-dns.alpha.kubernetes.io/target: kube.stevearnett.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.kube.stevearnett.com`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
